# harness

./: .gitignore  PROMPT.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-07-harness-mcp-part-1-foundation.md  2026-05-07-harness-mcp-part-2-storage-infra.md  2026-05-07-harness-mcp-part-3-agent-wrappers.md  2026-05-07-harness-mcp-part-4-planning-prereqs.md  2026-05-07-harness-mcp-part-5-orchestration.md  2026-05-08-anthropic-api-key-optional.md  2026-05-08-claude-overrides.md  2026-05-08-pyright-integration.md  2026-05-08-readme-claude-mcp-add.md  2026-05-08-run-build-blocking-tool.md
docs/superpowers/specs/: 2026-05-07-harness-mcp-design.md  2026-05-08-anthropic-api-key-optional-design.md  2026-05-08-claude-overrides-design.md  2026-05-08-pyright-integration-design.md  2026-05-08-readme-claude-mcp-add-design.md  2026-05-08-run-build-blocking-tool-design.md
examples/: mcp.json.stdio  mcp.json.streamable-http  todo-app-design.md
src/harness_mcp/: __init__.py  __main__.py  config.py  contracts.py  evaluator.py  evaluator_runner.py  generator.py  logging_setup.py  mcp_capture.py  orchestrator.py  phase_broker.py  planning.py  prereqs.py  process_group.py  prompts_loader.py  server.py  sprints.py  state.py  summarizer.py  types.py
src/harness_mcp/prompts/: evaluator.md  generator.md  planner.md  reviewer.md  summarizer.md
tests/: cancel_smoke.py  conftest.py  smoke.py  test_config.py  test_contracts.py  test_evaluator.py  test_evaluator_runner.py  test_generator.py  test_logging_setup.py  test_mcp_capture.py  test_orchestrator.py  test_phase_broker.py  test_planning.py  test_prereqs.py  test_process_group.py  test_prompts_loader.py  test_run_build.py  test_server.py  test_sprints.py  test_state.py  test_summarizer.py  test_types.py
